# engine3d

./: LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
docs/: README.md
examples/: cube.py  refraction-demo.py  sandbox.ipynb  vector3.py
src/engine3d/: __init__.py  engine3d.py  renderer.py
src/engine3d/geometry/: matrix.py  vector.py
src/engine3d/geometry/base/: matrixbase.py  vectorbase.py
src/engine3d/math/: matrix.py  vector.py
src/engine3d/math/base/: matrixbase.py  vectorbase.py
src/engine3d/object/: objects.py  world.py
tests/: test_matrix.py  test_matrixbase.py  test_vector.py  test_vector2d.py  test_vector3d.py  test_vectorbase.py
